@@ -186,6 +186,7 @@ S3method(Anova, svyglm)
 S3method(avPlot, lm)
 S3method(avPlot, glm)
 S3method(bootCase, lm)
+S3method(vcov, boot)
 S3method(bootCase, glm)
 S3method(bootCase, nls)
 S3method(Boxplot, default)
