@@ -4,27 +4,27 @@
 \alias{confint.boot}
 
 \title{
-Generic functions to provide support for \code{boot} objects
+Methods Functions to Support \code{boot} Objects
 }
 \description{
-The \code{Boot} function in \code{car} uses the \code{boot} function from the
-\code{boot} package to do a straightforward case 
-or residual bootstrap for a regression object.  These are generic functions to 
+The \code{Boot} function in the \pkg{car} package uses the \code{\link{boot}} function from the
+\pkg{boot} package to do a straightforward case
+or residual bootstrap for a least-squares regression object.  These are method functions for standard generics to
 summarize the results of the bootstrap.
 }
 
-\usage{  
-\method{hist}{boot}(x, parm, layout = NULL, ask, main = "", freq = FALSE, 
-    estPoint = TRUE, point.col = "black", point.lty = 2, point.lwd = 2, 
-    estDensity = !freq, den.col = "blue", den.lty = 1, den.lwd = 2, 
-    estNormal = !freq, nor.col = "red", nor.lty = 2, nor.lwd = 2, 
-    ci = c("bca", "none", "percentile"), level = 0.95, legend = c("top", 
+\usage{
+\method{hist}{boot}(x, parm, layout = NULL, ask, main = "", freq = FALSE,
+    estPoint = TRUE, point.col = "black", point.lty = 2, point.lwd = 2,
+    estDensity = !freq, den.col = "blue", den.lty = 1, den.lwd = 2,
+    estNormal = !freq, nor.col = "red", nor.lty = 2, nor.lwd = 2,
+    ci = c("bca", "none", "perc"), level = 0.95, legend = c("top",
         "none", "separate"), box = TRUE, ...)
 
-\method{summary}{boot}(object, parm, high.moments = FALSE, extremes = FALSE, ...) 
-    
-\method{confint}{boot}(object, parm, level = 0.95, type = c("bca", "norm", 
-    "basic", "perc", "all"), ...) 
+\method{summary}{boot}(object, parm, high.moments = FALSE, extremes = FALSE, ...)
+
+\method{confint}{boot}(object, parm, level = 0.95, type = c("bca", "norm",
+    "basic", "perc", "all"), ...)
 }
 
 \arguments{
@@ -81,12 +81,12 @@ of the lines that are drawn.
   \item{ci}{
 A confidence interval based on the bootstrap will be added to the histogram
 using the BCa method if \code{ci="bca"} or using the percentile method if
-\code{ci="percentile"}.  No interval is drawn if
+\code{ci="perc"}.  No interval is drawn if
 \code{ci="none"}.  The default is \code{"bca"}.  The interval is indicated
 by a thick horizontal line at \code{y=0}.  For some bootstraps the BCa method is unavailable and another method should be used.
 }
   \item{legend}{
-A legend can be added to the (array of) histograms.  The value \dQuote{"top"} 
+A legend can be added to the (array of) histograms.  The value \dQuote{"top"}
 puts at the top-left of the plots.  The value \dQuote{"separate"} puts the legend in its own graph following all the histograms.  The value \dQuote{"none"}
 suppresses the legend.
 }
@@ -94,9 +94,9 @@ suppresses the legend.
 Add a box around each histogram.
 }
   \item{\dots}{
-Additional arguments passed to \code{hist}; for other methods this is included for compatibility with the generic method.  For example, the argument 
+Additional arguments passed to \code{hist}; for other methods this is included for compatibility with the generic method.  For example, the argument
 \code{border=par()$bg} in \code{hist} will draw the histogram transparently, leaving only
-the density estimates.   
+the density estimates.
 }
   \item{high.moments}{
 Should the skewness and kurtosis be included in the summary?  Default is FALSE.
@@ -133,7 +133,7 @@ York: Chapman and Hall.
 Fox, J. and Weisberg, S. (2011)
 \emph{An R Companion to Applied Regression}, Second Edition.  Sage.
 
-Fox, J. and Weisberg, S. (2012) \emph{Bootstrapping}, 
+Fox, J. and Weisberg, S. (2012) \emph{Bootstrapping},
 \url{http://socserv.mcmaster.ca/jfox/Books/Companion/appendix/Appendix-Bootstrapping.pdf}.
 
 Weisberg, S. (2013) \emph{Applied
@@ -151,5 +151,5 @@ summary(betahat.boot)  # default summary
 confint(betahat.boot)
 hist(betahat.boot)
 }
-\keyword{regression}% at least one, from doc/KEYWORDS
+\keyword{regression}
 
